# open_creature_combat

./: .gitignore  README.md  pyproject.toml
creature_combat/creature/: creature.py  creature_base_stats.py  creature_natures.py  creature_types.py  creaturedex.py  effort_values.py  individual_values.py
creature_combat/engine/: combat_functions.py  combat_manager.py  participant.py  player.py
creature_combat/moves/: move.py  move_effects.py  move_list.py  move_types.py
creature_combat/statuses/: non_volatile_statuses.py
creature_combat/utils/: annotations.py  extended_enums.py  mappings.py  math_utils.py  path_utils.py
creaturedex_data/: Bulbasaur.json  Charmander.json  README.md  example.json
demos/: __init__.py  demo_players.py  player_vs_computer.py
move_data/: Ember.json  Growl.json  README.md  Scratch.json  Tackle.json  Tail Whip.json  Vine Whip.json  Water Gun.json  example.json
pokedex_data/: Squirtle.json
pokemon_combat/engine/: combat_functions.py  combat_manager.py  participant.py  player.py
pokemon_combat/moves/: move.py  move_effects.py  move_list.py  move_types.py
pokemon_combat/pokemon/: pokedex.py  pokemon.py  pokemon_base_stats.py  pokemon_natures.py  pokemon_types.py
pokemon_combat/statuses/: non_volatile_statuses.py
pokemon_combat/utils/: mappings.py  math_utils.py
test/: test_partiticipant.py  test_pokemon_stats.py
