[build-system]
requires = ["setuptools>=63.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "creature_combat"
version = "0.0.6"
authors = [
  { name="Alex Sells", email="author@example.com" },
]
description = "Open source python based battle engine replicating creature gen 6 combat."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "typing_extensions>=4.11.0"
]
[tool.setuptools.packages.find]
include = ["creature_combat*", "move_data", "creaturedex_data"]
exclude = ["test*"]

[too.setuptools.package-data]
